initial website finished

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -23,12 +23,14 @@
     .btn-line {
       &:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px);
+        background: $secondary-color;
       }
       &:nth-child(2) {
         opacity: 0;
       }
       &:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px);
+        background: $secondary-color;
       }
     }
   }
@@ -38,7 +40,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.96;
   visibility: hidden;
 
   &.show {
