--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -12,12 +12,19 @@
 }
 //tablets & small laptops
 @include mediaMd {
-  text-align: center;
-  align-items: center;
+  main {
+    text-align: center;
+    align-items: center;
 
-  .lg-heading {
-    line-height: 1;
-    margin-bottom: 1rem;
+    .lg-heading {
+      font-size: 5.5rem;
+      line-height: 1;
+      margin-bottom: 0.1rem;
+    }
+
+    .sm-heading {
+      margin-bottom: 1.5rem;
+    }
   }
 
   ul.menu-nav,
@@ -32,13 +39,13 @@
   }
 
   .menu-nav {
-    height: 75vh;
+    height: 65vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
   }
 
   .menu-branding {
-    height: 25vh;
+    height: 35vh;
     transform: translate3d(100%, 0, 0);
 
     .portrait {
@@ -72,6 +79,10 @@
       margin-top: 1rem;
       font-size: 5rem;
     }
+  }
+
+  #mail-box {
+    font-size: 1.5rem;
   }
 
   .projects {
