--- a/css/main.css
+++ b/css/main.css
@@ -251,6 +251,12 @@ main#home h1 {
   border-color: #c68c51;
   transition: all 0.5s ease-out;
 }
+.item-card {
+  border: 1px solid black;
+}
+.text-card {
+  padding: 5px;
+}
 
 .boxes {
   display: flex;
