--- a/css/main.css
+++ b/css/main.css
@@ -306,6 +306,10 @@ main#home h1 {
   color: #333;
 }
 
+.show-link {
+  text-decoration: underline;
+}
+
 #main-footer {
   text-align: center;
   padding: 1rem;
